Bug 298416 - krunner crashes after inserting DVD
Summary: krunner crashes after inserting DVD
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udisks (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
: 298415 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-19 13:54 UTC by Tom
Modified: 2012-08-17 21:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom 2012-04-19 13:54:30 UTC
Application: krunner (0.1)
KDE Platform Version: 4.8.2 (4.8.2)
Qt Version: 4.8.1
Operating System: Linux 3.4.0-0.rc3.git1.1.fc18.x86_64 x86_64
Distribution: "Fedora release 18 (Rawhide)"

-- Information about the crash:
- What I was doing when the application crashed:
Inserted DVD and desktop crashed. Desktop restarts and runs normally afterward.
Got this bug together with https://bugs.kde.org/show_bug.cgi?id=298415.

The crash can be reproduced every time.

-- Backtrace:
Application: Run Command Interface (krunner), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f9232307880 (LWP 3397))]

Thread 2 (Thread 0x7f92267d9700 (LWP 3408)):
#0  __pthread_mutex_unlock_usercnt (mutex=0x7f9220000a60, decr=decr@entry=1) at pthread_mutex_unlock.c:42
#1  0x0000003cd960aada in __pthread_mutex_unlock (mutex=<optimized out>) at pthread_mutex_unlock.c:298
#2  0x0000003730a836f1 in g_mutex_unlock (mutex=mutex@entry=0x7f92200009a0) at gthread-posix.c:227
#3  0x0000003730a473d9 in g_main_context_check (context=context@entry=0x7f92200009a0, max_priority=2147483647, fds=fds@entry=0x7f9220002bb0, n_fds=n_fds@entry=1) at gmain.c:3034
#4  0x0000003730a47912 in g_main_context_iterate (context=context@entry=0x7f92200009a0, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3120
#5  0x0000003730a47a94 in g_main_context_iteration (context=0x7f92200009a0, may_block=1) at gmain.c:3184
#6  0x00007f923b853a46 in QEventDispatcherGlib::processEvents (this=0x7f92200008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#7  0x00007f923b82499f in QEventLoop::processEvents (this=this@entry=0x7f92267d8cf0, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007f923b824c28 in QEventLoop::exec (this=0x7f92267d8cf0, flags=...) at kernel/qeventloop.cpp:204
#9  0x00007f923b7285e0 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#10 0x00007f923b80541f in QInotifyFileSystemWatcherEngine::run (this=0x796f10) at io/qfilesystemwatcher_inotify.cpp:248
#11 0x00007f923b72b57b in QThreadPrivate::start (arg=0x796f10) at thread/qthread_unix.cpp:298
#12 0x0000003cd9607d14 in start_thread (arg=0x7f92267d9700) at pthread_create.c:309
#13 0x0000003cd8ef194d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f9232307880 (LWP 3397)):
[KCrash Handler]
#6  __strlen_sse2 () at ../sysdeps/x86_64/strlen.S:32
#7  0x00007f9233f832a9 in util_strpcpy (dest=0x7ffff807f5a0, size=1024, src=0x5002b <Address 0x5002b out of bounds>) at src/libudev-util.c:172
#8  0x00007f9233f83441 in util_strscpyl (dest=dest@entry=0x7ffff807f610 "0000:00/0000:00:11.0/ata2/host1/target1:0:0/1:0:0:0/block/sr0/uevent", size=<optimized out>, size@entry=1024, src=<optimized out>) at src/libudev-util.c:221
#9  0x00007f9233f85cdc in udev_device_read_db (udev_device=udev_device@entry=0x966ad0, dbfile=dbfile@entry=0x0) at src/libudev-device.c:476
#10 0x00007f9233f83edf in udev_device_get_properties_list_entry (udev_device=0x966ad0) at src/libudev-device.c:1189
#11 0x00007f9233f84053 in udev_device_get_property_value (udev_device=0x5002b, key=0xb7ee58 "ID_CDROM_MEDIA_STATE") at src/libudev-device.c:454
#12 0x00007f9238aa8e65 in UdevQt::Device::deviceProperty (this=0x9542f0, name=...) at /usr/src/debug/kdelibs-4.8.2/solid/solid/backends/shared/udevqtdevice.cpp:219
#13 0x00007f9238abc29a in Solid::Backends::UDisks2::OpticalDisc::isAppendable (this=0x9542c0) at /usr/src/debug/kdelibs-4.8.2/solid/solid/backends/udisks2/udisksopticaldisc.cpp:205
#14 0x00007f921a334805 in SolidDeviceEngine::populateDeviceData (this=this@entry=0xa0d780, name=...) at /usr/src/debug/kde-workspace-4.8.2/plasma/generic/dataengines/soliddevice/soliddeviceengine.cpp:341
#15 0x00007f921a338901 in SolidDeviceEngine::sourceRequestEvent (this=0xa0d780, name=...) at /usr/src/debug/kde-workspace-4.8.2/plasma/generic/dataengines/soliddevice/soliddeviceengine.cpp:77
#16 0x00007f923db4633d in Plasma::DataEnginePrivate::requestSource (this=0xa0b360, sourceName=..., newSource=newSource@entry=0x7ffff8084a4f) at /usr/src/debug/kdelibs-4.8.2/plasma/dataengine.cpp:707
#17 0x00007f923db46546 in Plasma::DataEngine::connectSource (this=0xa0d780, source=..., visualization=0xa32e90, pollingInterval=0, intervalAlignment=Plasma::NoAlignment) at /usr/src/debug/kdelibs-4.8.2/plasma/dataengine.cpp:95
#18 0x00007f921a75725f in SolidRunner::onSourceAdded (this=0xa01f50, name=...) at /usr/src/debug/kde-workspace-4.8.2/plasma/generic/runners/solid/solidrunner.cpp:260
#19 0x00007f921a757589 in SolidRunner::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kde-workspace-4.8.2/x86_64-redhat-linux-gnu/plasma/generic/runners/solid/solidrunner.moc:57
#20 0x00007f923b83c0df in QMetaObject::activate (sender=0xa02450, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff8084c30) at kernel/qobject.cpp:3547
#21 0x00007f923db450a2 in Plasma::DataEngine::sourceAdded (this=this@entry=0xa02450, _t1=...) at /usr/src/debug/kdelibs-4.8.2/x86_64-redhat-linux-gnu/plasma/dataengine.moc:204
#22 0x00007f923db467b7 in Plasma::DataEngine::setData (this=0xa02450, source=..., data=...) at /usr/src/debug/kdelibs-4.8.2/plasma/dataengine.cpp:223
#23 0x00007f921a549c1f in HotplugEngine::onDeviceAdded (this=this@entry=0xa02450, device=..., added=added@entry=false) at /usr/src/debug/kde-workspace-4.8.2/plasma/generic/dataengines/hotplug/hotplugengine.cpp:243
#24 0x00007f921a54ab46 in HotplugEngine::processNextStartupDevice (this=0xa02450) at /usr/src/debug/kde-workspace-4.8.2/plasma/generic/dataengines/hotplug/hotplugengine.cpp:95
#25 0x00007f923b83a22e in QObject::event (this=0xa02450, e=<optimized out>) at kernel/qobject.cpp:1195
#26 0x00007f923c4694ac in QApplicationPrivate::notify_helper (this=this@entry=0x66a5d0, receiver=receiver@entry=0xa02450, e=e@entry=0xaf9070) at kernel/qapplication.cpp:4554
#27 0x00007f923c46d9da in QApplication::notify (this=0x659920, receiver=0xa02450, e=0xaf9070) at kernel/qapplication.cpp:4415
#28 0x00007f923d186a26 in KApplication::notify (this=0x659920, receiver=0xa02450, event=0xaf9070) at /usr/src/debug/kdelibs-4.8.2/kdeui/kernel/kapplication.cpp:311
#29 0x00007f923b82599e in QCoreApplication::notifyInternal (this=0x659920, receiver=receiver@entry=0xa02450, event=event@entry=0xaf9070) at kernel/qcoreapplication.cpp:876
#30 0x00007f923b829441 in sendEvent (event=0xaf9070, receiver=0xa02450) at kernel/qcoreapplication.h:231
#31 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x635870) at kernel/qcoreapplication.cpp:1500
#32 0x00007f923b853893 in sendPostedEvents () at kernel/qcoreapplication.h:236
#33 postEventSourceDispatch (s=s@entry=0x668960) at kernel/qeventdispatcher_glib.cpp:279
#34 0x0000003730a475bc in g_main_dispatch (context=0x668e00) at gmain.c:2515
#35 g_main_context_dispatch (context=context@entry=0x668e00) at gmain.c:3052
#36 0x0000003730a479d8 in g_main_context_iterate (context=context@entry=0x668e00, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at gmain.c:3123
#37 0x0000003730a47a94 in g_main_context_iteration (context=0x668e00, may_block=1) at gmain.c:3184
#38 0x00007f923b853a26 in QEventDispatcherGlib::processEvents (this=0x637150, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#39 0x00007f923c50944e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#40 0x00007f923b82499f in QEventLoop::processEvents (this=this@entry=0x7ffff80857a0, flags=...) at kernel/qeventloop.cpp:149
#41 0x00007f923b824c28 in QEventLoop::exec (this=0x7ffff80857a0, flags=...) at kernel/qeventloop.cpp:204
#42 0x00007f923b829758 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#43 0x00000033b282a5df in kdemain (argc=1, argv=0x7ffff80859e8) at /usr/src/debug/kde-workspace-4.8.2/krunner/main.cpp:66
#44 0x0000003cd8e21735 in __libc_start_main (main=0x400870 <main(int, char**)>, argc=1, ubp_av=0x7ffff80859e8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffff80859d8) at libc-start.c:226
#45 0x00000000004008a1 in _start ()

Reported using DrKonqi
Comment 1 Lukáš Tinkl 2012-04-20 11:14:06 UTC
Notice this is rawhide with the very experimental udisks2 backend :) I will look into it...
Comment 2 Lukáš Tinkl 2012-04-20 19:09:43 UTC
*** Bug 298415 has been marked as a duplicate of this bug. ***
Comment 3 Lukáš Tinkl 2012-04-20 21:17:54 UTC
Git commit ac5aeb1eaeb3e6bc25424182ec8854c1dc1e4aa8 by Lukas Tinkl.
Committed on 20/04/2012 at 23:10.
Pushed by lukas into branch 'frameworks'.

don't crash on querying udev properties of optical media

M  +6    -3    tier1/solid/src/solid/backends/udisks2/udisksopticaldisc.cpp
M  +1    -1    tier1/solid/src/solid/backends/udisks2/udisksopticaldisc.h

http://commits.kde.org/kdelibs/ac5aeb1eaeb3e6bc25424182ec8854c1dc1e4aa8
Comment 4 Lukáš Tinkl 2012-08-17 21:18:38 UTC
Git commit 68f8784c790e97fafb7393225e54e7de8e62f1c9 by Lukas Tinkl.
Committed on 20/04/2012 at 23:10.
Pushed by nalvarez into branch 'KDE/4.10'.

don't crash on querying udev properties of optical media

(commit extracted from ac5aeb1eaeb3e6bc25424182ec8854c1dc1e4aa8)

M  +6    -3    solid/solid/backends/udisks2/udisksopticaldisc.cpp
M  +1    -1    solid/solid/backends/udisks2/udisksopticaldisc.h

http://commits.kde.org/kdelibs/68f8784c790e97fafb7393225e54e7de8e62f1c9