don't crash on querying udev properties of optical media

BUG: 298416

(commit extracted from ac5aeb1eaeb3e6bc25424182ec8854c1dc1e4aa8)